[gd_scene load_steps=10 format=3 uid="uid://bnah6d37dam5s"]

[ext_resource type="Script" uid="uid://us4h0q25mlj5" path="res://Scripts/Core/Title.gd" id="1_hbotl"]
[ext_resource type="Texture2D" uid="uid://dav381wq6ly4h" path="res://Assets/Images/Title.png" id="2_e3eap"]
[ext_resource type="FontFile" uid="uid://gxb8jc5bj3cd" path="res://Assets/Fonts/PressStart2P.ttf" id="3_pljp2"]
[ext_resource type="StyleBox" uid="uid://bg1fatmttmcey" path="res://Assets/UI_Resources/FocusTexture.tres" id="4_p5poa"]
[ext_resource type="StyleBox" uid="uid://d4ddxd4fvdf4o" path="res://Assets/UI_Resources/HoverTexture.tres" id="5_hxufm"]
[ext_resource type="StyleBox" uid="uid://b6pmunfpdsdix" path="res://Assets/UI_Resources/PressedTexture.tres" id="6_xt5i8"]

[sub_resource type="Animation" id="Animation_44kyq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExitWarning:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_hadrf"]
resource_name = "roll_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExitWarning:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y47t4"]
_data = {
&"RESET": SubResource("Animation_44kyq"),
&"roll_in": SubResource("Animation_hadrf")
}

[node name="ZETitle" type="Node2D"]
script = ExtResource("1_hbotl")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("2_e3eap")
centered = false

[node name="NewGameButton" type="Button" parent="."]
offset_left = 192.0
offset_top = 224.0
offset_right = 480.0
offset_bottom = 256.0
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../PasswordButton")
focus_next = NodePath("../PasswordButton")
focus_previous = NodePath("../ExitButton")
theme_override_colors/font_outline_color = Color(0.121229, 0.237502, 0.253147, 1)
theme_override_colors/font_color = Color(0.756863, 0.898039, 0.917647, 1)
theme_override_colors/font_pressed_color = Color(0.560784, 0.239216, 0.654902, 1)
theme_override_fonts/font = ExtResource("3_pljp2")
theme_override_styles/focus = ExtResource("4_p5poa")
theme_override_styles/hover = ExtResource("5_hxufm")
theme_override_styles/pressed = ExtResource("6_xt5i8")
text = "New Game"

[node name="PasswordButton" type="Button" parent="."]
offset_left = 192.0
offset_top = 264.0
offset_right = 480.0
offset_bottom = 296.0
focus_neighbor_top = NodePath("../NewGameButton")
focus_neighbor_bottom = NodePath("../SettingsButton")
focus_next = NodePath("../SettingsButton")
focus_previous = NodePath("../NewGameButton")
theme_override_colors/font_outline_color = Color(0.121229, 0.237502, 0.253147, 1)
theme_override_colors/font_color = Color(0.756863, 0.898039, 0.917647, 1)
theme_override_colors/font_pressed_color = Color(0.560784, 0.239216, 0.654902, 1)
theme_override_fonts/font = ExtResource("3_pljp2")
theme_override_styles/focus = ExtResource("4_p5poa")
theme_override_styles/hover = ExtResource("5_hxufm")
theme_override_styles/pressed = ExtResource("6_xt5i8")
text = "Password"

[node name="SettingsButton" type="Button" parent="."]
offset_left = 192.0
offset_top = 304.0
offset_right = 480.0
offset_bottom = 336.0
focus_neighbor_top = NodePath("../PasswordButton")
focus_neighbor_right = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../PasswordButton")
theme_override_colors/font_outline_color = Color(0.121229, 0.237502, 0.253147, 1)
theme_override_colors/font_color = Color(0.756863, 0.898039, 0.917647, 1)
theme_override_colors/font_pressed_color = Color(0.560784, 0.239216, 0.654902, 1)
theme_override_fonts/font = ExtResource("3_pljp2")
theme_override_styles/focus = ExtResource("4_p5poa")
theme_override_styles/hover = ExtResource("5_hxufm")
theme_override_styles/pressed = ExtResource("6_xt5i8")
text = "Settings"

[node name="ExitButton" type="Button" parent="."]
offset_left = 560.0
offset_top = 304.0
offset_right = 624.0
offset_bottom = 336.0
focus_neighbor_left = NodePath("../SettingsButton")
focus_neighbor_top = NodePath("../SettingsButton")
focus_neighbor_right = NodePath("../SettingsButton")
focus_neighbor_bottom = NodePath("../NewGameButton")
focus_next = NodePath("../NewGameButton")
focus_previous = NodePath("../SettingsButton")
theme_override_colors/font_outline_color = Color(0.121229, 0.237502, 0.253147, 1)
theme_override_colors/font_color = Color(0.756863, 0.898039, 0.917647, 1)
theme_override_colors/font_pressed_color = Color(0.560784, 0.239216, 0.654902, 1)
theme_override_fonts/font = ExtResource("3_pljp2")
theme_override_font_sizes/font_size = 12
theme_override_styles/focus = ExtResource("4_p5poa")
theme_override_styles/hover = ExtResource("5_hxufm")
theme_override_styles/pressed = ExtResource("6_xt5i8")
text = "Exit"

[node name="ExitWarning" type="Label" parent="ExitButton"]
layout_mode = 0
offset_left = -216.0
offset_top = 40.0
offset_right = 64.0
offset_bottom = 63.0
theme_override_colors/font_color = Color(0.756863, 0.898039, 0.917647, 1)
theme_override_colors/font_shadow_color = Color(0.121229, 0.237502, 0.253147, 1)
theme_override_fonts/font = ExtResource("3_pljp2")
theme_override_font_sizes/font_size = 8
text = "Are you sure? Will exit to Desktop."
visible_characters = 0
visible_ratio = 0.0

[node name="RollText" type="AnimationPlayer" parent="ExitButton"]
libraries = {
&"": SubResource("AnimationLibrary_y47t4")
}

[connection signal="focus_entered" from="NewGameButton" to="." method="_on_new_game_button_focus_entered"]
[connection signal="mouse_entered" from="NewGameButton" to="." method="_on_new_game_button_mouse_entered"]
[connection signal="pressed" from="NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="focus_entered" from="PasswordButton" to="." method="_on_password_button_focus_entered"]
[connection signal="mouse_entered" from="PasswordButton" to="." method="_on_password_button_mouse_entered"]
[connection signal="pressed" from="PasswordButton" to="." method="_on_password_button_pressed"]
[connection signal="focus_entered" from="SettingsButton" to="." method="_on_settings_button_focus_entered"]
[connection signal="mouse_entered" from="SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="focus_entered" from="ExitButton" to="." method="_on_exit_button_focus_entered"]
[connection signal="focus_exited" from="ExitButton" to="." method="_on_exit_button_focus_exited"]
[connection signal="mouse_entered" from="ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="mouse_exited" from="ExitButton" to="." method="_on_exit_button_mouse_exited"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
